--- a/server/Front/recconta.html
+++ b/server/Front/recconta.html
@@ -9,6 +9,10 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="_css/estilo.css" rel="stylesheet">
     <style>
+        body {
+            background: #444;
+        }
+
         main {
             padding-top: 2%;
         }
@@ -61,6 +65,14 @@
         .outros:hover {
             color: #999;
         }
+
+        footer {
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+
+        }
     </style>
 </head>
 
@@ -79,43 +91,32 @@
                 <div class="col-md-4 mx-auto col-lg-9">
                     <form class="p-4 p-md-5 border border-3 border-dark rounded-5">
                         <div class="row">
-                            <div class="log col-sm-6"> Login</div>
+                            <div class="log col-sm-6"> Recuperar conta</div>
                         </div>
                         <div class="row m-auto">
                             <div class="col-sm-3 m-auto">
-                                <label class="form-label">Usuário:</label>
+                                <label class="form-label">Email:</label>
                             </div>
                             <div class="col-sm-9">
-                                <input type="text" class="form-control" id="input-user" placeholder="User">
-                            </div>
-                        </div>
-
-                        <div class="row m-auto">
-                            <div class="col-sm-3 m-auto">
-                                <label class="form-label">Senha:</label>
-                            </div>
-                            <div class="col-sm-9">
-                                <input type="password" class="form-control" id="input-pass" placeholder="Password">
+                                <input type="email" class="form-control" id="input-main" placeholder="Email">
                             </div>
                         </div>
 
                         <div class="row m-auto">
                             <div class="col-sm-2 m-auto">
-                                <button class="btn btn-lg" type="submit">Entrar</button>
+                                <button class="btn btn-lg" type="submit">Recuperar</button>
                             </div>
                         </div>
                     </form>
                     <div class="row">
                         <div class="col-sm-3 m-auto">
-                            <a class="outros" href="recconta.html">Esqueci a senha </a>
+                            <a class="outros" href="login.html">Já tenho conta </a>
                         </div>
                         <div class="col-sm-3 m-auto">
-                            <a class="outros" href="cconta.html">Criar conta</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <br>
     </main>
 
     <footer>
@@ -125,8 +126,6 @@
             </p>
         </div>
     </footer>
-
-
     <!-- Fim -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
