--- a/server/Front/index.html
+++ b/server/Front/index.html
@@ -77,13 +77,29 @@
     <main>
         <div class="container">
 
-            <div class="row">  
+            <div class="row">
                 <div class="files col-sm-11 m-auto p-4 border border-3 border-dark" id="files">
                     <h2>Files mais votados:</h2>
-                    <div class="row" id="votes">
-                        <template id="file-display">
-                            <div class="quadros col-sm-3 border border-2 border-dark">
-                                <h4>user1</h4>
+                    <div class="row">
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
+
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+
+                            <h4>user2</h4>
+                            <a class="file" href="pfile.html">
                                 <h5>Título do File</h5>
                                 <div class="exemplo m-auto border border-1 border-dark"></div>
                                 <div class="col">
@@ -95,16 +111,76 @@
                                 <div class="col">
                                     <h6>Comentários: Número</h6>
                                 </div>
+                            </a>
+                        </div>
+
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
                             </div>
-                        </template>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
 
             <div class="row">
                 <div class="files col-sm-11 m-auto mt-5 p-4 border border-3 border-dark" id="files">
                     <h2>Files mais baixados:</h2>
-                    <div class="row" id="downloads">
+                    <div class="row">
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
+
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
+
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
@@ -112,9 +188,54 @@
 
             <div class="row">
                 <div class="files col-sm-11 m-auto mt-5 p-4 border border-3 border-dark" id="files">
-                    <h2>Files mais recentes:</h2>
-                    <div class="row" id="time">
+                    <h2>Files mais comentados:</h2>
+                    <div class="row">
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
+
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
+
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -134,7 +255,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
-    <script src="index.js"></script>
 </body>
 
 </html>
