--- a/server/Front/pfile.html
+++ b/server/Front/pfile.html
@@ -120,10 +120,10 @@
             <div class="row">
                 <div class="files col-sm-11 m-auto p-4 border border-3 border-dark" id="files">
                     <div class="all row">
-                        <h2 id="title">Título do File</h2>
+                        <h2>Título do File</h2>
                     </div>
                     <div class="all row">
-                        <h3 id="user">User2</h3>
+                        <h3>User2</h3>
                     </div>
                     <div class="all row">
                         <div class="exemplo border border-4 border-dark"></div>
@@ -138,10 +138,10 @@
                     </div>
                     <div class="esp row">
                         <div class="col sm-6">
-                            <h3 id="votes">Número</h3>
+                            <h3>Número</h3>
                         </div>
                         <div class="votes col sm-6">
-                            <h3 id="downloads">Número</h3>
+                            <h3>Número</h3>
                         </div>
                     </div>
 
@@ -156,7 +156,7 @@
 
                     <div class="row">
                         <div class="info col-sm-11 m-auto border border-3 border-dark">
-                            <p id="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque viverra
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque viverra
                                 magna convallis
                                 ex viverra hendrerit. Proin ut nunc semper, dictum ante eget, aliquet justo. Quisque
                                 venenatis bibendum condimentum. Nullam pretium eros urna, ac aliquam libero dignissim
@@ -257,7 +257,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
-        <script src="pfile.js"></script>
 </body>
 
 </html>
