--- a/server/Front/index.html
+++ b/server/Front/index.html
@@ -84,7 +84,7 @@
                         <template id="file-display">
                             <div class="quadros col-sm-3 border border-2 border-dark">
                                 <h4>user1</h4>
-                                <a href="file:///home/wellington/Documentos/Eng_Soft_File_Jolt/server/Front/pfile.html"><h5>Título do File</h5></a>
+                                <a href="pfile.html"><h5>Título do File</h5></a>
                                 <div class="exemplo m-auto border border-1 border-dark"></div>
                                 <div class="col">
                                     <h6>Votos: Número</h6>
