--- a/server/Front/pfile.html
+++ b/server/Front/pfile.html
@@ -20,7 +20,8 @@
             margin-right: 10%;
             height: 500px;
             width: 89%;
-            background-image: linear-gradient(to bottom, red, blue);
+            border-color: #222;
+            background-color: #222;
             padding: 2%;
         }
 
@@ -126,7 +127,7 @@
                         <h3 id="user">User2</h3>
                     </div>
                     <div class="all row">
-                        <div class="exemplo border border-4 border-dark"></div>
+                        <img src="_img/img-smp.jpg" class="exemplo img-thumbnail mt-2" alt="Img">
                     </div>
                     <div class="esp row">
                         <div class="col sm-6">
@@ -257,7 +258,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
-        <script src="pfile.js"></script>
+    <script src="pfile.js"></script>
 </body>
 
 </html>
