--- a/server/Front/index.html
+++ b/server/Front/index.html
@@ -66,7 +66,7 @@
     <nav class="navbar navbar-expanded">
         <div class="container-fluid">
 
-            <a class="navbar-brand p-20" href="index.html" alt="Logo File Jolt">
+            <a class="navbar-brand p-20" href="." alt="Logo File Jolt">
                 <img src="_img/logo1.png" />
             </a>
 
@@ -74,7 +74,7 @@
                 <input class="form-control m-2" type="text" placeholder="Pesquisa">
             </form>
 
-            <a href="login.html">
+            <a href="login">
                 <button type="button" class="btn btn-light" id="login-btn"> Login </button>
             </a>
         </div>
@@ -90,7 +90,7 @@
                         <template id="file-display">
                             <div class="quadros col-sm-3 border border-2 border-dark">
                                 <h4>user1</h4>
-                                <a href="pfile.html" class="test">
+                                <a href="file" class="test">
                                     <h5>Título do File</h5>
                                 </a>
                                 <img src="_img/img-smp.jpg" class="exemplo img-thumbnail mt-2" alt="Img">
