--- a/server/Front/busca/index.html
+++ b/server/Front/busca/index.html
@@ -7,12 +7,17 @@
     <title>File Jolt</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="_css/estilo.css" rel="stylesheet">
+    <link href="../_css/estilo.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
-
     <style>
+        .all {
+            margin-left: 10%;
+            margin-top: 2%;
+            margin-bottom: 4%;
+        }
+
         h2 {
             text-align: left;
             margin-top: 2%;
@@ -56,39 +61,88 @@
             color: azure;
         }
     </style>
-
 </head>
-<!-- Home -->
+<!-- Buscar Files -->
 
 <body>
     <nav class="navbar navbar-expanded">
         <div class="container-fluid">
 
-            <a class="navbar-brand p-20" href="index.html" alt="Logo File Jolt">
-                <img src="_img/logo1.png" />
+            <a class="navbar-brand p-20" href="../" alt="Logo File Jolt">
+                <img src="../_img/logo1.png" />
             </a>
 
             <form class="d-flex">
                 <div class="form-group mx-2">
                     <input class="form-control" type="text" placeholder="Pesquisa">
                 </div>
-                <a href="busca.html">
+                <a href="../busca">
                     <button type="button" class="btn btn-light m-auto" id="pesqisa-btn"> Pesquisar </button>
                 </a>
             </form>
 
-            <a href="login.html">
+            <a href="../login">
                 <button type="button" class="btn btn-light" id="login-btn"> Login </button>
             </a>
         </div>
     </nav>
 
     <main>
-        <div class="container">
-
+        <div class="container pb-5">
             <div class="row">
-                <div class="files col-sm-11 m-auto p-4 border border-3 border-dark" id="files">
-                    <h2>Files mais votados:</h2>
+                <div class="files col-sm-11 m-auto p-4 pb-5 border border-3 border-dark" id="files">
+                    <h2>Files encontrados:</h2>
+                    <div class="row pb-5">
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
+
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+
+                            <a class="file" href="../user">
+                                <h4>user2</h4>
+                            </a>
+                            <a class="file" href="../file">
+                                <h5>Título do File</h5>
+                                <div class="exemplo m-auto border border-1 border-dark"></div>
+                                <div class="col">
+                                    <h6>Votos: Número</h6>
+                                </div>
+                                <div class="col">
+                                    <h6>Downloads: Número</h6>
+                                </div>
+                                <div class="col">
+                                    <h6>Comentários: Número</h6>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="quadros col-sm-3 border border-2 border-dark">
                             <h4>user1</h4>
@@ -106,10 +160,9 @@
                         </div>
 
                         <div class="quadros col-sm-3 border border-2 border-dark">
-                            <a class="file" href="user.html">
-                                <h4>user2</h4>
-                            </a>
-                            <a class="file" href="pfile.html">
+
+                            <h4>user2</h4>
+                            <a class="file" href="../file">
                                 <h5>Título do File</h5>
                                 <div class="exemplo m-auto border border-1 border-dark"></div>
                                 <div class="col">
@@ -142,114 +195,9 @@
 
                 </div>
             </div>
-
-            <div class="row">
-                <div class="files col-sm-11 m-auto mt-5 p-4 border border-3 border-dark" id="files">
-                    <h2>Files mais baixados:</h2>
-                    <div class="row">
-                        <div class="quadros col-sm-3 border border-2 border-dark">
-                            <h4>user1</h4>
-                            <h5>Título do File</h5>
-                            <div class="exemplo m-auto border border-1 border-dark"></div>
-                            <div class="col">
-                                <h6>Votos: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Downloads: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Comentários: Número</h6>
-                            </div>
-                        </div>
-
-                        <div class="quadros col-sm-3 border border-2 border-dark">
-                            <h4>user1</h4>
-                            <h5>Título do File</h5>
-                            <div class="exemplo m-auto border border-1 border-dark"></div>
-                            <div class="col">
-                                <h6>Votos: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Downloads: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Comentários: Número</h6>
-                            </div>
-                        </div>
-
-                        <div class="quadros col-sm-3 border border-2 border-dark">
-                            <h4>user1</h4>
-                            <h5>Título do File</h5>
-                            <div class="exemplo m-auto border border-1 border-dark"></div>
-                            <div class="col">
-                                <h6>Votos: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Downloads: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Comentários: Número</h6>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="files col-sm-11 m-auto mt-5 p-4 border border-3 border-dark" id="files">
-                    <h2>Files mais comentados:</h2>
-                    <div class="row">
-                        <div class="quadros col-sm-3 border border-2 border-dark">
-                            <h4>user1</h4>
-                            <h5>Título do File</h5>
-                            <div class="exemplo m-auto border border-1 border-dark"></div>
-                            <div class="col">
-                                <h6>Votos: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Downloads: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Comentários: Número</h6>
-                            </div>
-                        </div>
-
-                        <div class="quadros col-sm-3 border border-2 border-dark">
-                            <h4>user1</h4>
-                            <h5>Título do File</h5>
-                            <div class="exemplo m-auto border border-1 border-dark"></div>
-                            <div class="col">
-                                <h6>Votos: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Downloads: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Comentários: Número</h6>
-                            </div>
-                        </div>
-
-                        <div class="quadros col-sm-3 border border-2 border-dark">
-                            <h4>user1</h4>
-                            <h5>Título do File</h5>
-                            <div class="exemplo m-auto border border-1 border-dark"></div>
-                            <div class="col">
-                                <h6>Votos: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Downloads: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Comentários: Número</h6>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
         </div>
     </main>
+
     <footer>
         <div class="footer">
             <p id="foot">© 2022 Todos os direitos reservados <br> Desenvolvido por Alexandre Petusk, Arthur Labaki,
@@ -257,8 +205,6 @@
             </p>
         </div>
     </footer>
-
-
 
 
     <!-- Fim -->
