--- a/server/Front/file/index.html
+++ b/server/Front/file/index.html
@@ -7,8 +7,11 @@
     <title>File Jolt</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="_css/estilo.css" rel="stylesheet">
+    <link href="../_css/estilo.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
     <style>
         .all {
             margin-left: 10%;
@@ -20,8 +23,7 @@
             margin-right: 10%;
             height: 500px;
             width: 89%;
-            border-color: #222;
-            background-color: #222;
+            background-image: linear-gradient(to bottom, red, blue);
             padding: 2%;
         }
 
@@ -97,19 +99,26 @@
     </style>
 
 </head>
+<!-- Exemplo de File -->
 
 <body>
     <nav class="navbar navbar-expanded">
         <div class="container-fluid">
 
-            <a class="navbar-brand p-20" href="index.html" alt="Logo File Jolt">
-                <img src="_img/logo1.png" />
+            <a class="navbar-brand p-20" href="../" alt="Logo File Jolt">
+                <img src="../_img/logo1.png" />
             </a>
 
             <form class="d-flex">
-                <input class="form-control m-2" type="text" placeholder="Pesquisa">
+                <div class="form-group mx-2">
+                    <input class="form-control" type="text" placeholder="Pesquisa">
+                </div>
+                <a href="../busca">
+                    <button type="button" class="btn btn-light m-auto" id="pesqisa-btn"> Pesquisar </button>
+                </a>
             </form>
-            <a href="login.html">
+
+            <a href="../login">
                 <button type="button" class="btn btn-light" id="login-btn"> Login </button>
             </a>
         </div>
@@ -127,7 +136,7 @@
                         <h3 id="user">User2</h3>
                     </div>
                     <div class="all row">
-                        <img src="_img/img-smp.jpg" class="exemplo img-thumbnail mt-2" alt="Img">
+                        <img src="../_img/img-smp.jpg" class="exemplo img-thumbnail mt-2" alt="Img">
                     </div>
                     <div class="esp row">
                         <div class="col sm-6">
