--- a/server/Front/login/index.html
+++ b/server/Front/login/index.html
@@ -7,7 +7,7 @@
     <title>File Jolt</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="_css/estilo.css" rel="stylesheet">
+    <link href="../_css/estilo.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
@@ -80,8 +80,8 @@
         <div class="container pb-2">
             <div class="row">
                 <div class="col-sm-2 m-auto">
-                    <a href="index.html" alt="file Jolt" id="logo-login">
-                        <img src="_img/logo1.png">
+                    <a href="../" alt="file Jolt" id="logo-login">
+                        <img src="../_img/logo1.png">
                     </a>
                 </div>
             </div>
@@ -111,7 +111,7 @@
 
                         <div class="row m-auto">
                             <div class="col-sm-2 m-auto">
-                                <a href="nav-logado.html">
+                                <a href="../nav-logado.html">
                                     <button class="but3 btn btn-outline-secondary btn-lg btn-light"
                                         type="button">Logar</button>
                                 </a>
@@ -120,10 +120,10 @@
                     </form>
                     <div class="row">
                         <div class="col-sm-3 m-auto">
-                            <a class="outros" href="recconta.html">Esqueci a senha </a>
+                            <a class="outros" href="../recuperarconta">Esqueci a senha </a>
                         </div>
                         <div class="col-sm-3 m-auto">
-                            <a class="outros" href="cconta.html">Criar conta</a>
+                            <a class="outros" href="../criarconta">Criar conta</a>
                         </div>
                     </div>
                 </div>
