--- a/server/Front/nav-logado.html
+++ b/server/Front/nav-logado.html
@@ -11,13 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
-    <style>
-        .all {
-            margin-left: 10%;
-            margin-top: 2%;
-            margin-bottom: 4%;
-        }
 
+    <style>
         h2 {
             text-align: left;
             margin-top: 2%;
@@ -61,14 +56,15 @@
             color: azure;
         }
     </style>
+
 </head>
-<!-- Buscar Files -->
+<!-- Home -->
 
 <body>
     <nav class="navbar navbar-expanded">
         <div class="container-fluid">
 
-            <a class="navbar-brand p-20" href="index.html" alt="Logo File Jolt">
+            <a class="navbar-brand p-20" href="." alt="Logo File Jolt">
                 <img src="_img/logo1.png" />
             </a>
 
@@ -76,73 +72,31 @@
                 <div class="form-group mx-2">
                     <input class="form-control" type="text" placeholder="Pesquisa">
                 </div>
-                <a href="busca.html">
+                <a href="busca">
                     <button type="button" class="btn btn-light m-auto" id="pesqisa-btn"> Pesquisar </button>
                 </a>
             </form>
 
-            <a href="login.html">
-                <button type="button" class="btn btn-light" id="login-btn"> Login </button>
-            </a>
+            <div class="btn-group">
+                <button type="button" class="btn btn-secondary btn-light dropdown-toggle" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    User
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end mt-2">
+                    <li><a class="dropdown-item" href="perfil/">Perfil</a></li>
+                    <li><a class="dropdown-item" href="biblioteca">Biblioteca</a></li>
+                    <li><a class="dropdown-item" href=".">Sair</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
 
     <main>
-        <div class="container pb-5">
+        <div class="container">
+
             <div class="row">
-                <div class="files col-sm-11 m-auto p-4 pb-5 border border-3 border-dark" id="files">
-                    <h2>Files encontrados:</h2>
-                    <div class="row pb-5">
-                        <div class="quadros col-sm-3 border border-2 border-dark">
-                            <h4>user1</h4>
-                            <h5>Título do File</h5>
-                            <div class="exemplo m-auto border border-1 border-dark"></div>
-                            <div class="col">
-                                <h6>Votos: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Downloads: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Comentários: Número</h6>
-                            </div>
-                        </div>
-
-                        <div class="quadros col-sm-3 border border-2 border-dark">
-
-                            <a class="file" href="user.html">
-                                <h4>user2</h4>
-                            </a>
-                            <a class="file" href="pfile.html">
-                                <h5>Título do File</h5>
-                                <div class="exemplo m-auto border border-1 border-dark"></div>
-                                <div class="col">
-                                    <h6>Votos: Número</h6>
-                                </div>
-                                <div class="col">
-                                    <h6>Downloads: Número</h6>
-                                </div>
-                                <div class="col">
-                                    <h6>Comentários: Número</h6>
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="quadros col-sm-3 border border-2 border-dark">
-                            <h4>user1</h4>
-                            <h5>Título do File</h5>
-                            <div class="exemplo m-auto border border-1 border-dark"></div>
-                            <div class="col">
-                                <h6>Votos: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Downloads: Número</h6>
-                            </div>
-                            <div class="col">
-                                <h6>Comentários: Número</h6>
-                            </div>
-                        </div>
-                    </div>
+                <div class="files col-sm-11 m-auto p-4 border border-3 border-dark" id="files">
+                    <h2>Files mais votados:</h2>
                     <div class="row">
                         <div class="quadros col-sm-3 border border-2 border-dark">
                             <h4>user1</h4>
@@ -160,9 +114,10 @@
                         </div>
 
                         <div class="quadros col-sm-3 border border-2 border-dark">
-
-                            <h4>user2</h4>
-                            <a class="file" href="pfile.html">
+                            <a class="file" href="user">
+                                <h4>user2</h4>
+                            </a>
+                            <a class="file" href="file">
                                 <h5>Título do File</h5>
                                 <div class="exemplo m-auto border border-1 border-dark"></div>
                                 <div class="col">
@@ -195,9 +150,114 @@
 
                 </div>
             </div>
+
+            <div class="row">
+                <div class="files col-sm-11 m-auto mt-5 p-4 border border-3 border-dark" id="files">
+                    <h2>Files mais baixados:</h2>
+                    <div class="row">
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
+
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
+
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="files col-sm-11 m-auto mt-5 p-4 border border-3 border-dark" id="files">
+                    <h2>Files mais comentados:</h2>
+                    <div class="row">
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
+
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
+
+                        <div class="quadros col-sm-3 border border-2 border-dark">
+                            <h4>user1</h4>
+                            <h5>Título do File</h5>
+                            <div class="exemplo m-auto border border-1 border-dark"></div>
+                            <div class="col">
+                                <h6>Votos: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Downloads: Número</h6>
+                            </div>
+                            <div class="col">
+                                <h6>Comentários: Número</h6>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
     </main>
-
     <footer>
         <div class="footer">
             <p id="foot">© 2022 Todos os direitos reservados <br> Desenvolvido por Alexandre Petusk, Arthur Labaki,
@@ -205,6 +265,8 @@
             </p>
         </div>
     </footer>
+
+
 
 
     <!-- Fim -->
