--- a/server/Front/recuperarconta/index.html
+++ b/server/Front/recuperarconta/index.html
@@ -7,11 +7,15 @@
     <title>File Jolt</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="_css/estilo.css" rel="stylesheet">
+    <link href="../_css/estilo.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
     <style>
+        body {
+            background: #444;
+        }
+
         main {
             padding-top: 2%;
         }
@@ -64,9 +68,17 @@
         .outros:hover {
             color: #999;
         }
+
+        footer {
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+
+        }
     </style>
 </head>
-<!-- Criar conta-->
+<!-- Recuperar conta -->
 
 <body>
 
@@ -74,8 +86,8 @@
         <div class="container pb-2">
             <div class="row">
                 <div class="col-sm-2 m-auto">
-                    <a href="index.html" alt="file Jolt" id="logo-login">
-                        <img src="_img/logo1.png">
+                    <a href="../" alt="file Jolt" id="logo-login">
+                        <img src="../_img/logo1.png">
                     </a>
                 </div>
             </div>
@@ -83,51 +95,32 @@
                 <div class="col-md-4 mx-auto col-lg-9">
                     <form class="p-4 p-md-5 border border-3 border-dark rounded-5">
                         <div class="row">
-                            <div class="log col-sm-6"> Criar Conta</div>
+                            <div class="log col-sm-6"> Recuperar conta</div>
                         </div>
-                        <div class="row m-auto">
-                            <div class="col-sm-3 m-auto">
-                                <label class="form-label">Usuário:</label>
-                            </div>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" id="input-user" placeholder="User">
-                            </div>
-                        </div>
-
                         <div class="row m-auto">
                             <div class="col-sm-3 m-auto">
                                 <label class="form-label">Email:</label>
                             </div>
                             <div class="col-sm-9">
-                                <input type="email" class="form-control" id="input-pass" placeholder="Email">
-                            </div>
-                        </div>
-
-                        <div class="row m-auto">
-                            <div class="col-sm-3 m-auto">
-                                <label class="form-label">Senha:</label>
-                            </div>
-                            <div class="col-sm-9">
-                                <input type="password" class="form-control" id="input-pass" placeholder="Password">
+                                <input type="email" class="form-control" id="input-main" placeholder="Email">
                             </div>
                         </div>
 
                         <div class="row m-auto">
                             <div class="col-sm-2 m-auto">
-                                <button class="btn btn-lg" type="submit">Criar</button>
+                                <button class="btn btn-lg" type="submit">Recuperar</button>
                             </div>
                         </div>
                     </form>
                     <div class="row">
                         <div class="col-sm-3 m-auto">
-                            <a class="outros" href="login.html">Já tenho conta </a>
+                            <a class="outros" href="login">Já tenho conta </a>
                         </div>
                         <div class="col-sm-3 m-auto">
                         </div>
                     </div>
                 </div>
             </div>
-            <br>
     </main>
 
     <footer>
@@ -137,8 +130,6 @@
             </p>
         </div>
     </footer>
-
-
     <!-- Fim -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
