--- a/server/Front/recuperarconta/index.html
+++ b/server/Front/recuperarconta/index.html
@@ -114,7 +114,7 @@
                     </form>
                     <div class="row">
                         <div class="col-sm-3 m-auto">
-                            <a class="outros" href="login">Já tenho conta </a>
+                            <a class="outros" href="../login">Já tenho conta </a>
                         </div>
                         <div class="col-sm-3 m-auto">
                         </div>
