--- a/server/file/index.html
+++ b/server/file/index.html
@@ -181,7 +181,11 @@
                             </div>
                             <div class="dnw col sm-1">
                                 <!-- <i class="icn bi bi-hand-thumbs-up"></i> -->
-                                <h3 id="downloadb">Baixar</h3>
+                                <h3>
+                                    <a id="downloadb">
+                                        Baixar
+                                    </a>
+                                </h3>
                             </div>
                         </div>
                     </div>
